# easy7zip

./: .clang-format  .copier-answers.yml  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  noxfile.py  pyproject.toml  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  semantic-release.yml
cmake/ports/7zip/: 7zip.h  CMakeLists.txt  add-functions-and-fixes-for-static-link.patch  extras.h  guids.h  portfile.cmake
docs/: conf.py  index.md
docs/api/: index.md  py7zip.rst
src/_core/: CMakeLists.txt
src/_core/src/: _core.hpp  main.cpp  pybind.cpp  pysmooth7zip.cpp
src/_core/tests/: CMakeLists.txt  test_core.cpp
src/py7zip/: __init__.py
src/smooth7zip/: CMakeLists.txt
src/smooth7zip/include/: smooth7zip.hpp
src/smooth7zip/include/smooth7zip/: smooth7zip.hpp  utils.hpp
src/smooth7zip/tests/: CMakeLists.txt  test_7z.cpp  test_7zip.cpp
src/wrapper/: CMakeLists.txt
src/wrapper/src/: main.cpp
tests/: test_compiled.py  test_package.py
